# smartcontractkit___chainlink-stellar

./: .dockerignore  .gitattributes  .gitignore  .mockery.yaml  CODEOWNERS  Cargo.toml  Dockerfile.executor  Dockerfile.verifier  Justfile  LICENSE  Makefile  README.md  go.mod  go.sum  rust-toolchain.toml
contracts/ccvs/committee-verifier/: Cargo.toml
contracts/ccvs/committee-verifier/src/: error.rs  events.rs  lib.rs  test.rs  types.rs
contracts/ccvs/versioned-verifier-resolver/: Cargo.toml  Makefile
contracts/ccvs/versioned-verifier-resolver/src/: error.rs  events.rs  lib.rs  test.rs  types.rs
contracts/common/interfaces/: Cargo.toml
contracts/common/interfaces/src/: burn_mint_pool.rs  ccip_receiver.rs  ccvs_proxy.rs  committee_verifier.rs  fee_quoter.rs  lib.rs  lock_release_pool.rs  mcms.rs  offramp.rs  onramp.rs  pool_hooks.rs  ramp_registry.rs  rmn_proxy.rs  rmn_remote.rs  router.rs  siloed_lock_release_pool.rs  timelock.rs  token_admin_registry.rs  token_lock_box.rs  token_pool.rs  versioned_verifier_resolver.rs
contracts/common/pool/: Cargo.toml
contracts/common/pool/src/: decimals.rs  decimals_tests.rs  events.rs  finality_codec.rs  finality_codec_tests.rs  lib.rs  rate_limit.rs  rate_limit_tests.rs  types.rs
contracts/common/verifier/: Cargo.toml
contracts/common/verifier/src/: base_verifier.rs  lib.rs  signatures.rs
contracts/cre/: Cargo.toml  forwarder.rs
contracts/cre/forwarder/: Makefile
contracts/cre/src/: error.rs  events.rs  lib.rs  test.rs  types.rs
contracts/cre/test/read_fixture/: Cargo.toml
contracts/cre/test_snapshots/test/: infrastructure_mock_receivers_register_successfully.1.json  test_accept_ownership_wrong_caller_fails.1.json  test_add_forwarder_succeeds.1.json  test_clear_config_other_versions_unaffected.1.json  test_config_v1_and_v2_coexist.1.json  test_config_with_f_at_practical_max.1.json  test_fuzz_metadata_byte_corruption_first_byte_path.172.json  test_fuzz_signature_flip_byte_at_each_offset.29.json  test_remove_forwarder_not_owner_fails.1.json  test_remove_forwarder_succeeds.1.json  test_replay_after_invalid_receiver_panics.1.json  test_report_after_clear_config_fails.1.json  test_report_different_report_id_not_blocked.1.json  test_report_receiver_panic_with_error_marks_failed.1.json  test_report_records_transmitter_in_transmission_info.1.json  test_set_config_at_max_oracles_boundary.1.json  test_set_config_first_time_succeeds.1.json  test_transfer_ownership_two_step_success.1.json  test_unauthorized_route_panics.1.json
contracts/examples/ccip_receiver/: Cargo.toml
contracts/examples/ccip_receiver/src/: events.rs  lib.rs  test.rs
contracts/mcms/: Cargo.toml  SPEC.md
contracts/mcms/src/: abi_encoding.rs  constants.rs  crypto.rs  error.rs  events.rs  lib.rs  test.rs  types.rs
contracts/mcms/test_snapshots/test/: test_execute_fails_missing_root_metadata.1.json  test_execute_reverts_bad_proof.1.json  test_execute_reverts_wrong_chain_id_op.1.json  test_initialize_and_chain_id.1.json  test_mcms_execute_timelock_schedule_batch_proposer_self_auth.1.json  test_mcms_ownership_round_trip_via_ramp_registry.1.json  test_set_config_1_of_1_and_get_config.1.json  test_set_config_clear_root_resets_state.1.json  test_set_min_secs_per_ledger_rejects_out_of_range.1.json  test_set_min_secs_per_ledger_round_trip.1.json  test_set_root_dynamic_cap_shrinks_with_lower_min_secs_per_ledger.1.json  test_set_root_execute_and_post_op_count_reached.1.json  test_set_root_reverts_valid_until_exceeds_90_day_cap.1.json  test_set_root_reverts_valid_until_expired.1.json  test_set_root_reverts_when_quorum_not_met_insufficient_signatures.1.json
contracts/offramp/: Cargo.toml
contracts/offramp/src/: events.rs  lib.rs  test.rs  types.rs
contracts/offramp/test_snapshots/test/: test_apply_source_chain_config.1.json  test_execute_ccv_length_mismatch.1.json  test_execute_invalid_message_destination.1.json  test_execute_invalid_offramp_address.1.json  test_execute_message_already_in_progress.1.json  test_execute_message_already_success.1.json  test_execute_reexecute_after_failure_succeeds.1.json  test_execute_source_chain_not_configured.1.json  test_execute_source_chain_not_enabled.1.json  test_extend_execution_state_ttl_ok.1.json  test_extend_execution_state_ttl_requires_storage_entry.1.json  test_get_all_source_chain_configs.1.json  test_get_execution_state_untouched.1.json  test_source_chain_config_zero_selector_fails.1.json
contracts/onramp/: Cargo.toml
contracts/onramp/src/: error.rs  events.rs  lib.rs  onramp_token_pool_forward_test.rs  test.rs  types.rs
contracts/onramp/test_snapshots/onramp_token_pool_forward_test/: test_ccip_send_emits_token_pool_receipt_before_executor_and_network_fee.1.json
contracts/onramp/test_snapshots/test/: test_apply_dest_chain_config.1.json  test_ccip_send_emits_token_pool_receipt_before_executor_and_network_fee.1.json  test_dest_chain_config_stores_execution_fee.1.json  test_dest_chain_not_configured_fails.1.json  test_double_initialize_fails.1.json  test_dynamic_config_update.1.json  test_get_all_dest_chain_configs.1.json  test_get_expected_next_message_number.1.json  test_initialize.1.json  test_invalid_dest_chain_config_same_as_local.1.json  test_invalid_dest_chain_config_zero_selector.1.json  test_multiple_dest_chain_configs.1.json  test_set_dynamic_config.1.json  test_transfer_ownership.1.json  test_update_dest_chain_config.1.json  test_validate_message_too_many_tokens.1.json  test_withdraw_fee_tokens_multiple_tokens.1.json  test_withdraw_fee_tokens_skips_zero_balance.1.json  test_withdraw_fee_tokens_transfers_balance.1.json
contracts/pools/lock-release-pool/: Cargo.toml
contracts/pools/lock-release-pool/src/: events.rs  lib.rs  test.rs
contracts/pools/siloed-lock-release-pool/: Cargo.toml
contracts/pools/siloed-lock-release-pool/src/: events.rs  lib.rs  test.rs
contracts/pools/token-lock-box/: Cargo.toml
contracts/pools/token-lock-box/src/: events.rs  lib.rs  test.rs
contracts/router/: Cargo.toml
contracts/router/src/: error.rs  events.rs  lib.rs  test.rs  test_panic_receiver.rs  types.rs
(+785 files in other folders)
