[workspace]
resolver = "2"
members = [
  "contracts/ccvs/*",
  "contracts/fee-quoter",
  "contracts/onramp",
  "contracts/offramp",
  "contracts/pools/*",
  "contracts/registry",
  "contracts/rmn_proxy",
  "contracts/router",
  "contracts/common/*",
]

[workspace.dependencies]
soroban-sdk = "25.1.0"
common-message = { path = "contracts/common/message" }
common-guard = { path = "contracts/common/guard" }
common-authorization = { path = "contracts/common/authorization" }
common-interfaces = { path = "contracts/common/interfaces" }
onramp = { path = "contracts/onramp" }
rmn_proxy = { path = "contracts/rmn_proxy" }
router = { path = "contracts/router" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
