[workspace]
resolver = "2"
members = [
  "contracts/ccvs/*",
  "contracts/fee-quoter",
  "contracts/onramp",
  "contracts/offramp",
  "contracts/pools/*",
  "contracts/registry",
  "contracts/rmn_proxy",
  "contracts/rmn_remote",
  "contracts/router",
  "contracts/common/*",
]

[workspace.dependencies]
soroban-sdk = "25.1.1"
common-message = { path = "contracts/common/message" }
common-guard = { path = "contracts/common/guard" }
common-authorization = { path = "contracts/common/authorization" }
common-error = { path = "contracts/common/error" }
common-interfaces = { path = "contracts/common/interfaces" }
common-verifier = { path = "contracts/common/verifier" }
common-helpers = { path = "contracts/common/helpers" }
fee-quoter = { path = "contracts/fee-quoter" }
onramp = { path = "contracts/onramp" }
rmn_proxy = { path = "contracts/rmn_proxy" }
rmn_remote = { path = "contracts/rmn_remote" }
router = { path = "contracts/router" }
ccvs-versioned-verifier-resolver = { path = "contracts/ccvs/versioned-verifier-resolver" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = "thin"

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
