[workspace]
resolver = "2"
members = [
  "contracts/mcms",
  "contracts/timelock",
  "contracts/ccvs/*",
  "contracts/examples/ccip_receiver",
  "contracts/fee-quoter",
  "contracts/onramp",
  "contracts/offramp",
  "contracts/pools/burn-mint-pool",
  "contracts/pools/lock-release-pool",
  "contracts/pools/siloed-lock-release-pool",
  "contracts/pools/token-lock-box",
  "contracts/ccip-ramp-registry",
  "contracts/registry",
  "contracts/token-admin-registry",
  "contracts/rmn_proxy",
  "contracts/rmn_remote",
  "contracts/router",
  "contracts/cre",
  "contracts/common/*",
]

[workspace.dependencies]
soroban-sdk = "25.1.1"
stellar-strkey = "0.0.16"
sha3 = "0.10"
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "std"] }
common-message = { path = "contracts/common/message" }
common-guard = { path = "contracts/common/guard" }
common-authorization = { path = "contracts/common/authorization" }
common-error = { path = "contracts/common/error" }
common-interfaces = { path = "contracts/common/interfaces" }
common-verifier = { path = "contracts/common/verifier" }
common-helpers = { path = "contracts/common/helpers" }
common-pool = { path = "contracts/common/pool" }
fee-quoter = { path = "contracts/fee-quoter" }
onramp = { path = "contracts/onramp" }
rmn_proxy = { path = "contracts/rmn_proxy" }
rmn_remote = { path = "contracts/rmn_remote" }
router = { path = "contracts/router" }
ccip-ramp-registry = { path = "contracts/ccip-ramp-registry" }
ccvs-versioned-verifier-resolver = { path = "contracts/ccvs/versioned-verifier-resolver" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = "thin"

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
