[package]
name = "keystone-forwarder"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true, features = ["hazmat-address"] }
common-authorization = { workspace = true }
common-guard = { workspace = true }
common-error = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils", "hazmat-address"] }
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
hex = "0.4"
