[package]
name = "mcms"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true, features = ["hazmat-address"] }
stellar-strkey = { workspace = true }
common-authorization = { workspace = true }
common-error = { workspace = true }
common-guard = { workspace = true }
common-helpers = { workspace = true }

[dev-dependencies]
ccip-ramp-registry = { workspace = true }
common-interfaces = { workspace = true }
timelock = { path = "../timelock" }
k256 = { workspace = true }
sha3 = { workspace = true }
soroban-sdk = { workspace = true, features = ["testutils"] }
