[package]
name = "offramp"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
stellar-strkey = { workspace = true }
common-message = { workspace = true }
common-guard = { workspace = true }
common-error = { workspace = true }
common-authorization = { workspace = true }
common-interfaces = { workspace = true }
common-helpers = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
rmn_proxy = { workspace = true }
rmn_remote = { workspace = true }
