[package]
name = "onramp"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
common-message = { workspace = true }
common-guard = { workspace = true }
common-error = { workspace = true }
common-authorization = { workspace = true }
common-interfaces = { workspace = true }
common-helpers = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
fee-quoter = { workspace = true }
router = { workspace = true }
rmn_proxy = { workspace = true }
rmn_remote = { workspace = true }
ccvs-versioned-verifier-resolver = { workspace = true }
ccip-ramp-registry = { workspace = true }
token-admin-registry = { path = "../token-admin-registry" }
pools-lock-release-pool = { path = "../pools/lock-release-pool" }
common-pool = { workspace = true }
