[package]
name = "router"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
common-message = { workspace = true }
common-authorization = { workspace = true }
common-interfaces = { workspace = true }
common-error = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
onramp = { workspace = true }
rmn_proxy = { workspace = true }
