[package]
name = "ccvs-committee-verifier"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
common-verifier = { workspace = true }
common-authorization = { workspace = true }
common-guard = { workspace = true }
common-error = { workspace = true }
common-helpers = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
rmn_proxy = { workspace = true }
rmn_remote = { workspace = true }
