[package]
name = "common-interfaces"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
common-message = { workspace = true }
ccvs-versioned-verifier-resolver = { workspace = true }
common-error = { workspace = true }
