[package]
name = "common-interfaces"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["rlib"]
doctest = false

# The deps below should not import any contracts from the workspace.
# It can only import other common crates.
[dependencies]
soroban-sdk = { workspace = true }
common-message = { workspace = true }
common-error = { workspace = true }