[package]
name = "common-pool"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
common-error = { workspace = true }
common-interfaces = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
