[package]
name = "common-verifier"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
common-guard = { workspace = true }
common-authorization = { workspace = true }
common-error = { workspace = true }
common-helpers = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
