[package]
name = "pools-lock-release-pool"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
common-error = { workspace = true }
common-guard = { workspace = true }
common-authorization = { workspace = true }
common-pool = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
common-interfaces = { workspace = true }
ccip-ramp-registry = { workspace = true }
