[package]
name = "pools-siloed-lock-release-pool"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
common-error = { workspace = true }
common-guard = { workspace = true }
common-authorization = { workspace = true }
common-pool = { workspace = true }
common-interfaces = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
pools-token-lock-box = { path = "../token-lock-box" }
ccip-ramp-registry = { workspace = true }
